# file-brain-mcp

./: .gitignore  .privacy_guard_config.json  README.md  context.md.backup.20260401_163656  file-brain-skill.yaml  file_brain_mcp.py  fix_filebrain.py  mcp_config.json  opencode.json  privacy-guard-skill.yaml  privacy_guard.py  pyproject.toml  test_privacy.py
.file_brain_index/: index.json
docs/: context-update-plan.md
examples/privacy-guard-integration/: README.md
skills/core-context/: SKILL.md
skills/file-brain/: SKILL.md
skills/memory/: SKILL.md
skills/privacy-guard/: SKILL.md
src/: file_brain_mcp.py  privacy_proxy.py
src/privacy-proxy/: config.json
