[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-brain-mcp"
version = "1.0.0"
description = "Local file system intelligent management - search, index, and Q&A capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mby159", url = "https://github.com/Mby159" }
]
keywords = ["file", "search", "index", "mcp", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
file-brain = "file_brain_mcp:main"

[project.urls]
Homepage = "https://github.com/Mby159/file-brain-mcp"
Documentation = "https://github.com/Mby159/file-brain-mcp#readme"
Repository = "https://github.com/Mby159/file-brain-mcp"
Issues = "https://github.com/Mby159/file-brain-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["file_brain_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
